# tri-mesh

./: .gitignore  Cargo.toml  LICENSE  README.md  profilestitch
.github/workflows/: rust.yml
examples/: main.rs  morph.rs  stitch.rs
examples/mesh_tools/: Cargo.toml  main.rs  morph.rs  run  stitch.rs
examples/mesh_tools/src/: lib.rs
examples/web/: Cargo.toml
examples/web/src/: lib.rs
examples/web/www/: index.html
src/: generation.rs  io.rs  lib.rs  math.rs  mesh.rs  mesh_builder.rs  operations.rs  prelude.rs  test_utility.rs
src/io/: obj.rs
src/mesh/: append.rs  bounding_box.rs  cleanup.rs  collision.rs  connected_components.rs  connectivity.rs  connectivity_info.rs  edge_measures.rs  edit.rs  export.rs  face_measures.rs  ids.rs  intersection.rs  io.rs  iterators.rs  merge.rs  merging_and_splitting.rs  orientation.rs  primitive_map.rs  quality.rs  split.rs  split_primitives_at_intersection.rs  transformations.rs  traversal.rs  utility.rs  validity.rs  vertex_measures.rs
src/mesh_builder/: obj.rs
src/operations/: bounding_box.rs  connected_components.rs  connectivity.rs  export.rs  face_measures.rs  intersection.rs  merge.rs  orientation.rs  quality.rs  split.rs  transformations.rs  validity.rs  vertex_measures.rs
src/parser/: obj.rs
