[package]
name = "tri-mesh"
version = "0.5.0" # REMEMBER TO UPDATE VERSION IN README!!
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"
description = "A triangle mesh data structure including basic operations."
license = "MIT"
readme = "README.md"
repository = "https://github.com/asny/tri-mesh"
categories = ["data-structures", "algorithms"]
keywords = ["mesh", "geometry", "3d", "half-edge", "graphics"]

[features]
default = ["obj-io", "3d-io"]
obj-io = ["wavefront_obj"] # Support for loading/saving .obj files
3d-io = ["serde", "bincode"] # Support for loading/saving .3d files (custom format)

[dependencies]
cgmath = "0.16"
wavefront_obj = { version = "5.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.2", optional = true }

[dev-dependencies]
dust = {path = "examples/dust/", version = "0.1.0"}