[package]
name = "tri-mesh"
version = "0.5.0" # REMEMBER TO UPDATE VERSION IN README!!
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2021"
description = "A triangle mesh data structure including basic operations."
license = "MIT"
readme = "README.md"
repository = "https://github.com/asny/tri-mesh"
categories = ["data-structures", "algorithms"]
keywords = ["mesh", "geometry", "3d", "half-edge", "graphics"]
exclude = ["/examples", ".gitignore"]

[features]
default = ["obj-io"]
obj-io = ["wavefront_obj"] # Support for loading/saving .obj files

[dependencies]
cgmath = "0.18"
wavefront_obj = { version = "5.1", optional = true }
