[package]
name = "tri-mesh"
version = "0.6.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2021"
description = "A triangle mesh data structure including basic operations."
license = "MIT"
readme = "README.md"
repository = "https://github.com/asny/tri-mesh"
categories = ["data-structures", "algorithms"]
keywords = ["mesh", "geometry", "3d", "half-edge", "graphics"]
exclude = ["/examples", ".gitignore"]

[features]
default = []

[dependencies]
cgmath = "0.18"
three-d-asset = {git="https://github.com/asny/three-d-asset" }
thiserror = "1.0"

[dev-dependencies]
three-d-asset = {git="https://github.com/asny/three-d-asset", features = ["obj"] }