[package]
name = "web"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
tri-mesh = {path = "../../"}
wasm-bindgen = "0.2.37"
console_error_panic_hook = "0.1.5"
dust = {git = "https://github.com/asny/Dust"}